[metadata]
name = statprof
version = 0.1.3
author = Bryan O'Sullivan
author_email = bos@serpentine.com
url = https://github.com/chbrown/statprof
description = Statistical profiling for Python
long_description = file: README.rst
keywords = profiling
license = LGPL
license_file = LICENSE
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Programming Language :: Python
  Operating System :: Unix
  Topic :: Utilities

[options]
py_modules = statprof
